PA_Education/TestMenifest/force-app/main/default/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <description>프로젝트에 대한 기본정보를 관리하며, Deal Closing 이후 생성한다. 영업담당자가 계약 체결 후 기초 데이터를 작성하며, 프로젝트 진행 중에는 PM이 관리하고, 대금청구/지급 관련 정보는 회계에서 관리한다.</description>
    <label>프로젝트</label>
    <nameField>
        <label>프로젝트 명</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Read</sharingModel>
</CustomObject>