PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/AgreementSubject__c.field-meta.xml
<CustomField>
    <fullName>AgreementSubject__c</fullName>
    <description>당사와 계약을 체결하는 업체명 또는 개인명</description>
    <inlineHelpText>당사와 계약을 체결하는 업체명 또는 개인명으로 계약서에 표기된 이름을 입력한다.</inlineHelpText>
    <label>계약상대자</label>
    <length>50</length>
    <type>Text</type>
</CustomField>