PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/AverageTime__c.field-meta.xml
<CustomField>
    <fullName>AverageTime__c</fullName>
    <formula>CumulativeTime__c  /  RequestCount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>평균 작업 시간</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>