PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Business__c.field-meta.xml
<CustomField>
    <fullName>Business__c</fullName>
    <label>사업부</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departments</valueSetName>
    </valueSet>
</CustomField>