PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <description>본 프로젝트를 발주한 고객명</description>
    <inlineHelpText>본 프로젝트를 발주한 고객명</inlineHelpText>
    <label>발주자(고객사)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>