PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ClosingReport__c.field-meta.xml
<CustomField>
    <fullName>ClosingReport__c</fullName>
    <label>종료 보고</label>
    <type>Date</type>
</CustomField>