PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>프로젝트가 종료되면 체크함.</inlineHelpText>
    <label>완료 여부</label>
    <type>Checkbox</type>
</CustomField>