PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <label>계약자명</label>
    <length>100</length>
    <type>Text</type>
</CustomField>