PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>계약</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>프로젝트</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <type>Lookup</type>
</CustomField>