PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/CumulativeTime__c.field-meta.xml
<CustomField>
    <fullName>CumulativeTime__c</fullName>
    <label>총 작업 시간</label>
    <summarizedField>ITSM__c.TimeTaken__c</summarizedField>
    <summaryFilterItems>
        <field>ITSM__c.fm_RequestType__c</field>
        <operation>notEqual</operation>
        <value>하자</value>
    </summaryFilterItems>
    <summaryForeignKey>ITSM__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>