PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ExpectedExpenses__c.field-meta.xml
<CustomField>
    <fullName>ExpectedExpenses__c</fullName>
    <formula>ru_Amount__c * 0.01</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>가용경비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>