PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ExpenseFromContract__c.field-meta.xml
<CustomField>
    <fullName>ExpenseFromContract__c</fullName>
    <label>금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>