PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ExpenseType__c.field-meta.xml
<CustomField>
    <fullName>ExpenseType__c</fullName>
    <label>금액유형</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>유지보수비</fullName>
            </value>
            <value>
                <fullName>라이센스</fullName>
            </value>
            <value>
                <fullName>용역비</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>