PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/fm_ALL_Profit__c.field-meta.xml
<CustomField>
    <fullName>fm_ALL_Profit__c</fullName>
    <formula>&quot;KRW&quot;&amp;TEXT( ru_Amount__c )&amp;&quot;/&quot;&amp;&quot;KRW&quot;&amp;TEXT( fm_NetAmount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>총매출/순매출</label>
    <type>Text</type>
</CustomField>