PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/fm_PM__c.field-meta.xml
<CustomField>
    <fullName>fm_PM__c</fullName>
    <formula>PM__r.LastName</formula>
    <label>프로젝트 관리자 (표시용)</label>
    <type>Text</type>
</CustomField>