PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Fm_Pm_YN__c.field-meta.xml
<CustomField>
    <fullName>Fm_Pm_YN__c</fullName>
    <description>프로젝트 화면에서 [투입인력 평가서]에 대한 가시성 설정을 위한 필드</description>
    <formula>IF(PM__c = $User.Id, true, false)</formula>
    <label>PM 여부확인</label>
    <type>Checkbox</type>
</CustomField>