PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/fm_RemainingExpense__c.field-meta.xml
<CustomField>
    <fullName>fm_RemainingExpense__c</fullName>
    <formula>ru_Budget__c - TotalExpense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>잔여 예산</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>