PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/InterimReport__c.field-meta.xml
<CustomField>
    <fullName>InterimReport__c</fullName>
    <label>중간보고</label>
    <type>Date</type>
</CustomField>