PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Is_Dummy__c.field-meta.xml
<CustomField>
    <fullName>Is_Dummy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Dummy</label>
    <type>Checkbox</type>
</CustomField>