PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/IsServiceContract__c.field-meta.xml
<CustomField>
    <fullName>IsServiceContract__c</fullName>
    <defaultValue>false</defaultValue>
    <label>유지보수계약여부</label>
    <type>Checkbox</type>
</CustomField>