PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/KickoffDate__c.field-meta.xml
<CustomField>
    <fullName>KickoffDate__c</fullName>
    <label>착수 보고</label>
    <type>Date</type>
</CustomField>