PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/LongestTime__c.field-meta.xml
<CustomField>
    <fullName>LongestTime__c</fullName>
    <label>최장 작업 시간</label>
    <summarizedField>ITSM__c.TimeTaken__c</summarizedField>
    <summaryForeignKey>ITSM__c.Project__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>