PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/MinimumTime__c.field-meta.xml
<CustomField>
    <fullName>MinimumTime__c</fullName>
    <label>최소 작업 시간</label>
    <summarizedField>ITSM__c.TimeTaken__c</summarizedField>
    <summaryForeignKey>ITSM__c.Project__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>