PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/OpeningDate__c.field-meta.xml
<CustomField>
    <fullName>OpeningDate__c</fullName>
    <label>오픈 일자</label>
    <type>Date</type>
</CustomField>