PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/OutsourcingDate__c.field-meta.xml
<CustomField>
    <fullName>OutsourcingDate__c</fullName>
    <label>계약일자</label>
    <type>Date</type>
</CustomField>