PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/OutsourcingDesc__c.field-meta.xml
<CustomField>
    <fullName>OutsourcingDesc__c</fullName>
    <label>계약내용</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>