PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/OutsourcingFee_del__c.field-meta.xml
<CustomField>
    <fullName>OutsourcingFee_del__c</fullName>
    <label>계약금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>