PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/OutsourcingType__c.field-meta.xml
<CustomField>
    <fullName>OutsourcingType__c</fullName>
    <label>구분</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>용역</fullName>
            </value>
            <value>
                <fullName>H/W</fullName>
            </value>
            <value>
                <fullName>S/W</fullName>
            </value>
            <value>
                <fullName>기타</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>