PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payment_Amount__c</fullName>
    <description>220620 문지훈작업
레코드 내 프로젝트 관리자(PM__c) 이거나, 시스템 관리자, RoleName = Sales Manager, Sales Member 만 해당 레코드의 값을 확인할 수 있도록 수식 재 설정</description>
    <formula>IF(OR(
				$User.Id =  PM__c,
				$Profile.Name=&apos;System Administrator&apos;,
				$Profile.Name=&apos;시스템 관리자&apos;,
                                $UserRole.Name = &apos;CEO&apos;,
                                $UserRole.Name = &apos;Business Management&apos;,
				$UserRole.Name = &apos;Sales Manager&apos;,
				$UserRole.Name = &apos;Sales Member&apos;),
			Contract__r.Payment_Amount__c,
			null
			)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>지급금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>