PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>프로젝트 관리자</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PM</relationshipName>
    <type>Lookup</type>
</CustomField>