PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/PMEmail__c.field-meta.xml
<CustomField>
    <fullName>PMEmail__c</fullName>
    <label>PMEmail</label>
    <type>Email</type>
</CustomField>