PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/PortaCustomer__c.field-meta.xml
<CustomField>
    <fullName>PortaCustomer__c</fullName>
    <formula>Contract__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PortaCustomer</label>
    <type>Text</type>
</CustomField>