PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ProjectSummary__c.field-meta.xml
<CustomField>
    <fullName>ProjectSummary__c</fullName>
    <inlineHelpText>프로젝트 배경, 목적, 범위, 추진방안, 특이사항 등을 간략히 기재한다.</inlineHelpText>
    <label>프로젝트 개요</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>