PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/RemainAmount_del__c.field-meta.xml
<CustomField>
    <fullName>RemainAmount_del__c</fullName>
    <formula>0 /*MAX(TotalBudget__c -  TotalExpense__c ,0)*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>잔여 금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>