PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/RemainingTime__c.field-meta.xml
<CustomField>
    <fullName>RemainingTime__c</fullName>
    <formula>Ticket__c - CumulativeTime__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>잔여 시간</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>