PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/RequestCount__c.field-meta.xml
<CustomField>
    <fullName>RequestCount__c</fullName>
    <label>요청건수</label>
    <summaryForeignKey>ITSM__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>