PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/ru_Budget__c.field-meta.xml
<CustomField>
    <fullName>ru_Budget__c</fullName>
    <label>비용예산</label>
    <summarizedField>ProjectBudget__c.ru_TotalAmount__c</summarizedField>
    <summaryFilterItems>
        <field>ProjectBudget__c.Status__c</field>
        <operation>equals</operation>
        <value>승인완료</value>
    </summaryFilterItems>
    <summaryForeignKey>ProjectBudget__c.Project__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>