PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Salesforce_Industry__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Industry__c</fullName>
    <label>Salesforce 산업분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>자동차</fullName>
            </value>
            <value>
                <fullName>통신</fullName>
            </value>
            <value>
                <fullName>소비재</fullName>
            </value>
            <value>
                <fullName>교육</fullName>
            </value>
            <value>
                <fullName>에너지 및 유틸리티</fullName>
            </value>
            <value>
                <fullName>금융 서비스</fullName>
            </value>
            <value>
                <fullName>공공부문</fullName>
            </value>
            <value>
                <fullName>헬프케어 및 생명과학</fullName>
            </value>
            <value>
                <fullName>제조업</fullName>
            </value>
            <value>
                <fullName>미디어</fullName>
            </value>
            <value>
                <fullName>비영리</fullName>
            </value>
            <value>
                <fullName>리테일</fullName>
            </value>
            <value>
                <fullName>기술</fullName>
            </value>
            <value>
                <fullName>운송 및 호스피탈리티</fullName>
            </value>
            <value>
                <fullName>직접입력</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>