PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product__c</fullName>
    <label>Salesforce 제품분류</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Cloud</fullName>
            </value>
            <value>
                <fullName>Service Cloud</fullName>
            </value>
            <value>
                <fullName>Marketing Cloud</fullName>
            </value>
            <value>
                <fullName>Commerce Cloud</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>MuleSoft</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform</fullName>
            </value>
            <value>
                <fullName>Net Zero Cloud</fullName>
            </value>
            <value>
                <fullName>Nonprofit Cloud</fullName>
            </value>
            <value>
                <fullName>Experience Cloud</fullName>
            </value>
            <value>
                <fullName>직접입력</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>