PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>착수 일자</label>
    <type>Date</type>
</CustomField>