PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <description>시간으로 입력</description>
    <label>총 계약 시간</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>