PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/TotalExpense__c.field-meta.xml
<CustomField>
    <fullName>TotalExpense__c</fullName>
    <defaultValue>0</defaultValue>
    <description>(구) 0. 전체비용</description>
    <label>경비신청금액</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>