PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Type1__c.field-meta.xml
<CustomField>
    <fullName>Type1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>1. 식대</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>