PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Type2__c.field-meta.xml
<CustomField>
    <fullName>Type2__c</fullName>
    <defaultValue>0</defaultValue>
    <label>2. 회의비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>