PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Type3__c.field-meta.xml
<CustomField>
    <fullName>Type3__c</fullName>
    <defaultValue>0</defaultValue>
    <label>3. 시내교통비</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>