PA_Education/TestMenifest/force-app/main/default/objects/Project__c/fields/Typein_Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Typein_Salesforce_Product__c</fullName>
    <description>Salesforce 제품분류 값중 직접입력을 선택 했을시 입력하는 필드</description>
    <label>직접입력(SF제품분류)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>