PA_Education/TestMenifest/force-app/main/default/objects/Project__c/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <description>프로젝트 사항 입력하는 Record Type</description>
    <label>프로젝트</label>
</RecordType>