PA_Education/TestMenifest/force-app/main/default/objects/Project__c/validationRules/Salesforce_Industry_ValidationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>Salesforce_Industry_ValidationRule</fullName>
    <active>true</active>
    <description>Salesforce 산업분류 값중 직접입력을 선택했을때 반드시 직접입력(SF산업분류) 필드에 값을 입력해야함</description>
    <errorConditionFormula>IF(
				AND(
								ISPICKVAL(Salesforce_Industry__c, &apos;직접입력&apos;),
								ISBLANK(Typein_Salesforce_Industry__c)
								),
				TRUE, FALSE
				)</errorConditionFormula>
    <errorDisplayField>Typein_Salesforce_Industry__c</errorDisplayField>
    <errorMessage>값을 입력해주세요.</errorMessage>
</ValidationRule>