PA_Education/TestMenifest/force-app/main/default/objects/Project__c/listViews/Closed_Project.listView-meta.xml
<ListView>
    <fullName>Closed_Project</fullName>
    <columns>NAME</columns>
    <columns>PM__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Completed__c</columns>
    <columns>ru_Amount__c</columns>
    <columns>fm_NetAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>본사공통</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>마케팅</value>
    </filters>
    <label>종료된 프로젝트</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>