PA_Education/TestMenifest/force-app/main/default/objects/Project__c/listViews/DaeU_Project.listView-meta.xml
<ListView>
    <fullName>DaeU_Project</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>PM__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>Completed__c</columns>
    <columns>ru_Amount__c</columns>
    <columns>fm_NetAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>본사공통</value>
    </filters>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>마케팅</value>
    </filters>
    <label>본사공통&amp;마케팅</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>