PA_Education/TestMenifest/force-app/main/default/objects/Project__c/listViews/ServiceContract.listView-meta.xml
<ListView>
    <fullName>ServiceContract</fullName>
    <columns>NAME</columns>
    <columns>Completed__c</columns>
    <columns>IsServiceContract__c</columns>
    <columns>Ticket__c</columns>
    <columns>RemainingTime__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Completed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>IsServiceContract__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>유지보수계약</label>
</ListView>